# stretto

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README-zh_CN.md  README-zh_hans.md  README.md  build.rs  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  loc.yml
benches/: bench.sh  insert.rs
benches/mock/: go.mod  go.sum  main.go
benches/moka-rs/: Cargo.toml
benches/moka-rs/src/: main.rs
benches/ristretto-go/: go.mod  go.sum  main.go
benches/ristretto-rs/: Cargo.toml
benches/ristretto-rs/src/: main.rs
ci/: miri.sh  sanitizer.sh  test-stable.sh
docs/superpowers/plans/: 2026-04-21-agnostic-lite-async-runtime.md
docs/superpowers/specs/: 2026-04-21-agnostic-lite-async-runtime-design.md
examples/: async_bench.rs  async_example.rs  get_only_bench.rs  insert_only_bench.rs  smol.rs  sync_bench.rs  sync_example.rs  tokio.rs
src/: bbloom.rs  cache.rs  error.rs  histogram.rs  lib.rs  macros.rs  metrics.rs  policy.rs  ring.rs  semaphore.rs  sketch.rs  store.rs  ttl.rs  utils.rs
src/cache/: async.rs  async_impl.rs  async_test.rs  axync.rs  builder.rs  insert_stripe.rs  sync.rs  sync_impl.rs  sync_test.rs  test.rs  wg.rs
src/policy/: async.rs  async_impl.rs  axync.rs  sync.rs  sync_impl.rs  test.rs
src/store/: flurry_store.rs
src/ttl/: flurry_expiration_map.rs  parking_lot_expiration_map.rs
