[package]
name = "stretto"
version = "0.8.0"
authors = ["Al Liu <scygliu1@gmail.com>"]
description = "Stretto is a high performance thread-safe memory-bound Rust cache."
homepage = "https://github.com/al8n/stretto"
repository = "https://github.com/al8n/stretto.git"
documentation = "https://docs.rs/stretto/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cache", "caching", "concurrent", "tinylfu", "async"]
categories = ["caching", "concurrency", "asynchronous", "data-structures"]
exclude = [
    "**/*.json",
    "**/*.go",
    "**/*.mod",
    "**/*.sum",
    "benches/*"
]
edition = "2021"

[[example]]
path = "examples/async_example.rs"
name = "async_example"
required-features = ["async"]
edition = "2021"

[[example]]
path = "examples/sync_example.rs"
name = "sync_example"
required-features = ["sync"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["sync"]
full = ["sync", "async", "serilization"]
async = ["async-channel", "async-io", "futures/default"]
sync = ["crossbeam-channel"]
serilization = ["serde", "serde/derive", "serde_json/default"]

[dependencies]
atomic = "0.5"
async-channel = { version = "1.8", optional = true }
async-io = { version = "1.12", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
futures = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
parking_lot = "0.12"
rand = "0.8"
serde = {version = "1", optional = true}
serde_json = {version = "1", optional = true}
seahash = "4.1"
wg = "0.3"
thiserror = "1"
tracing = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
serde = {version = "1", features = ["serde_derive"]}
serde_json = "1"
tokio = {version = "1.21", features = ["full"]}
async-std = { version = "1.12" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
