[package]
name = "stretto"
version = "0.9.0"
authors = ["Al Liu <scygliu1@gmail.com>"]
description = "Stretto is a high performance thread-safe memory-bound Rust cache."
homepage = "https://github.com/al8n/stretto"
repository = "https://github.com/al8n/stretto.git"
documentation = "https://docs.rs/stretto/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cache", "caching", "concurrent", "tinylfu", "async"]
categories = ["caching", "concurrency", "asynchronous", "data-structures"]
exclude = [
    "**/*.json",
    "**/*.go",
    "**/*.mod",
    "**/*.sum",
    "benches/*"
]
edition = "2024"
rust-version = "1.85.0"

[[example]]
path = "examples/tokio.rs"
name = "tokio"
required-features = ["tokio"]

[[example]]
path = "examples/smol.rs"
name = "smol"
required-features = ["smol"]

[[example]]
path = "examples/sync.rs"
name = "sync"
required-features = ["sync"]

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = ["sync"]
async = ["async-channel", "event-listener", "agnostic-lite/time", "futures/default", "wg/future", "crossbeam-channel"]
tokio = ["async", "agnostic-lite/tokio"]
smol  = ["async", "agnostic-lite/smol"]
sync = ["crossbeam-channel"]
serde = ["dep:serde", "dep:serde_json"]
send_guard = ["parking_lot/send_guard"]

[dependencies]
atomic = "0.6"
agnostic-lite = { version = "0.6", optional = true }
async-channel = { version = "2", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
crossbeam-utils = "0.8"
event-listener = { version = "5", optional = true }
futures = { version = "0.3", optional = true }
parking_lot = "0.12"
rand = "0.10"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
seahash = "4.1"
wg = "1"
thiserror = "2"
tracing = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
agnostic-lite = { version = "0.6", features = ["tokio"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "insert"
harness = false
required-features = ["sync"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
