[package]
name = "moka-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sync = ["moka"]
async = ["moka/future", "tokio/full"]

[dependencies]
moka = {version = "0.6.1", optional = true }
serde = {version = "1", features = ["serde_derive"] }
serde_json = "1.0.68"
tokio = {version = "1.12.0", optional = true }

